@@ -1,4 +1,4 @@
-/* Copyright (c) 2001-2014, The HSQL Development Group
+/* Copyright (c) 2001-2016, The HSQL Development Group
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -50,7 +50,7 @@ import org.hsqldb.types.Types;
  * Parser for session and management statements
  *
  * @author Fred Toussi (fredt@users dot sourceforge.net)
- * @version 2.3.2
+ * @version 2.3.4
  * @since 1.9.0
  */
 public class ParserCommand extends ParserDDL {
@@ -79,7 +79,7 @@ public class ParserCommand extends ParserDDL {
         HsqlArrayList list = new HsqlArrayList();
         Statement     cs   = null;
 
-        reset(sql);
+        reset(session, sql);
 
         while (true) {
             if (token.tokenType == Tokens.X_ENDPARSE) {
@@ -183,6 +183,11 @@ public class ParserCommand extends ParserDDL {
             }
             case Tokens.TRUNCATE : {
                 cs = compileTruncateStatement();
+
+                break;
+            }
+            case Tokens.REPLACE : {
+                cs = compileInsertStatement(RangeGroup.emptyArray);
 
                 break;
             }
@@ -291,6 +296,10 @@ public class ParserCommand extends ParserDDL {
                 cs = compileDeclare();
                 break;
 
+            case Tokens.PERFORM :
+                cs = compilePerform();
+                break;
+
             default :
                 throw unexpectedToken();
         }
@@ -318,8 +327,8 @@ public class ParserCommand extends ParserDDL {
 
     private Statement compileDeclare() {
 
-        Statement    cs;
-        ColumnSchema variables[];
+        Statement      cs;
+        ColumnSchema[] variables;
 
         cs = compileDeclareLocalTableOrNull();
 
@@ -337,7 +346,7 @@ public class ParserCommand extends ParserDDL {
             return cs;
         }
 
-        cs = compileDeclareCursor(RangeGroup.emptyArray, false);
+        cs = compileDeclareCursorOrNull(RangeGroup.emptyArray, false);
 
         if (cs == null) {
             throw lastError == null ? unexpectedToken()
@@ -430,11 +439,12 @@ public class ParserCommand extends ParserDDL {
                 read();
                 readThis(Tokens.TYPE);
 
-                int type = TableBase.MEMORY_TABLE;
+                int type;
 
                 switch (token.tokenType) {
 
                     case Tokens.MEMORY :
+                        type = TableBase.MEMORY_TABLE;
                         break;
 
                     case Tokens.CACHED :
@@ -523,8 +533,6 @@ public class ParserCommand extends ParserDDL {
     }
 
     private Statement compileSet() {
-
-        int position = super.getPosition();
 
         read();
 
@@ -725,11 +733,12 @@ public class ParserCommand extends ParserDDL {
                 readThis(Tokens.TABLE);
                 readThis(Tokens.TYPE);
 
-                int type = TableBase.MEMORY_TABLE;
+                int type;
 
                 switch (token.tokenType) {
 
                     case Tokens.MEMORY :
+                        type = TableBase.MEMORY_TABLE;
                         break;
 
                     case Tokens.CACHED :
@@ -764,7 +773,7 @@ public class ParserCommand extends ParserDDL {
 
                     read();
                 } else {
-                    delay = this.readInteger();
+                    delay = readInteger();
 
                     if (delay < 0) {
                         delay = 0;
@@ -777,7 +786,7 @@ public class ParserCommand extends ParserDDL {
                     }
                 }
 
-                Object[] args = new Object[]{ new Integer(delay) };
+                Object[] args = new Object[]{ Integer.valueOf(delay) };
 
                 return new StatementCommand(
                     StatementTypes.SET_DATABASE_FILES_WRITE_DELAY, args, null,
@@ -785,12 +794,12 @@ public class ParserCommand extends ParserDDL {
             }
             case Tokens.PASSWORD : {
                 String  password;
-                boolean isDigest = false;
+                Boolean isDigest = Boolean.FALSE;
 
                 read();
 
                 if (readIfThis(Tokens.DIGEST)) {
-                    isDigest = true;
+                    isDigest = Boolean.TRUE;
                 }
 
                 password = readPassword();
@@ -840,8 +849,6 @@ public class ParserCommand extends ParserDDL {
                 return compileSetProperty();
             }
             default : {
-                rewind(position);
-
                 return compileSetStatement(
                     session.sessionContext.sessionVariableRangeGroups,
                     session.sessionContext.sessionVariablesRange);
@@ -855,7 +862,7 @@ public class ParserCommand extends ParserDDL {
 
         Table    table = readTableName();
         Object[] args  = new Object[] {
-            table.getName(), null
+            table.getName(), null, null
         };
 
         switch (token.tokenType) {
@@ -911,6 +918,7 @@ public class ParserCommand extends ParserDDL {
                 read();
 
                 args[1] = value;
+                args[2] = Integer.valueOf(TableBase.CACHED_TABLE);
 
                 return new StatementCommand(StatementTypes.SET_TABLE_INDEX,
                                             args, null,
@@ -921,17 +929,34 @@ public class ParserCommand extends ParserDDL {
 
                 int newType;
 
-                if (token.tokenType == Tokens.CACHED) {
-                    newType = TableBase.CACHED_TABLE;
-                } else if (token.tokenType == Tokens.MEMORY) {
-                    newType = TableBase.MEMORY_TABLE;
-                } else {
-                    throw unexpectedToken();
+                switch (token.tokenType) {
+
+                    case Tokens.MEMORY :
+                        newType = TableBase.MEMORY_TABLE;
+                        break;
+
+                    case Tokens.CACHED :
+                        newType = TableBase.CACHED_TABLE;
+                        break;
+
+                    default :
+                        throw unexpectedToken();
+                }
+
+                switch (table.getTableType()) {
+
+                    case TableBase.MEMORY_TABLE :
+                    case TableBase.CACHED_TABLE :
+                    case TableBase.TEXT_TABLE :
+                        break;
+
+                    default :
+                        throw unexpectedToken();
                 }
 
                 read();
 
-                args[1] = new Integer(newType);
+                args[1] = Integer.valueOf(newType);
 
                 return new StatementCommand(StatementTypes.SET_TABLE_TYPE,
                                             args, null,
@@ -972,7 +997,7 @@ public class ParserCommand extends ParserDDL {
             case Tokens.SPACE : {
                 read();
 
-                Integer id = super.readIntegerObject();
+                Integer id = readIntegerObject();
 
                 args = new Object[] {
                     table.getName(), id
@@ -1060,7 +1085,7 @@ public class ParserCommand extends ParserDDL {
 
                 Integer  value = readIntegerObject();
                 Object[] args  = new Object[] {
-                    value, sqlLog
+                    value, Boolean.valueOf(sqlLog)
                 };
 
                 return new StatementCommand(
@@ -1128,6 +1153,18 @@ public class ParserCommand extends ParserDDL {
 
                 switch (token.tokenType) {
 
+                    case Tokens.LIVE :
+                        read();
+                        readThis(Tokens.OBJECT);
+
+                        property = HsqlDatabaseProperties.sql_live_object;
+                        flag     = processTrueOrFalseObject();
+
+                        Object[] args = new Object[] {
+                            property, flag, value
+                        };
+                        break;
+
                     case Tokens.NAMES :
                         read();
 
@@ -1186,6 +1223,14 @@ public class ParserCommand extends ParserDDL {
                         flag = processTrueOrFalseObject();
                         property =
                             HsqlDatabaseProperties.jdbc_translate_tti_types;
+                        break;
+
+                    case Tokens.CHARACTER :
+                        read();
+                        readThis(Tokens.LITERAL);
+
+                        flag     = processTrueOrFalseObject();
+                        property = HsqlDatabaseProperties.sql_char_literal;
                         break;
 
                     case Tokens.CONCAT_WORD :
@@ -1350,6 +1395,8 @@ public class ParserCommand extends ParserDDL {
 
                         mode = TransactionManager.LOCKS;
                         break;
+
+                    default :
                 }
 
                 HsqlName[] names =
@@ -1364,7 +1411,10 @@ public class ParserCommand extends ParserDDL {
             case Tokens.UNIQUE : {
                 read();
                 readThis(Tokens.NAME);
-                isUndelimitedSimpleName();
+
+                if (!isUndelimitedSimpleName()) {
+                    throw unexpectedToken();
+                }
 
                 name = token.tokenString;
 
@@ -1405,6 +1455,26 @@ public class ParserCommand extends ParserDDL {
 
         switch (token.tokenType) {
 
+            case Tokens.CHECK : {
+                read();
+
+                long longValue  = readBigint();
+                long longValue2 = -1;
+
+                type  = StatementTypes.SET_DATABASE_FILES_CHECK;
+                names = database.schemaManager.getCatalogNameArray();
+
+                if (readIfThis(Tokens.COMMA)) {
+                    longValue2 = readBigint();
+                }
+
+                Object[] args = new Object[2];
+
+                args[0] = Long.valueOf(longValue);
+                args[1] = Long.valueOf(longValue2);
+
+                return new StatementCommand(type, args, null, names);
+            }
             case Tokens.CACHE : {
                 read();
 
@@ -1423,15 +1493,6 @@ public class ParserCommand extends ParserDDL {
 
                     mode = Boolean.TRUE;
                 }
-
-                break;
-            }
-            case Tokens.CHECK : {
-                read();
-
-                value = readIntegerObject();
-                type  = StatementTypes.SET_DATABASE_FILES_CHECK;
-                names = database.schemaManager.getCatalogNameArray();
 
                 break;
             }
@@ -1552,7 +1613,7 @@ public class ParserCommand extends ParserDDL {
 
                     read();
                 } else {
-                    delay = this.readInteger();
+                    delay = readInteger();
 
                     if (delay < 0) {
                         delay = 0;
@@ -1565,7 +1626,7 @@ public class ParserCommand extends ParserDDL {
                     }
                 }
 
-                value = new Integer(delay);
+                value = Integer.valueOf(delay);
 
                 break;
             }
@@ -1576,11 +1637,11 @@ public class ParserCommand extends ParserDDL {
                 if (token.tokenType == Tokens.TEXT) {
                     read();
 
-                    value = new Integer(0);
+                    value = Integer.valueOf(0);
                 } else {
                     readThis(Tokens.COMPRESSED);
 
-                    value = new Integer(3);
+                    value = Integer.valueOf(3);
                 }
 
                 type = StatementTypes.SET_DATABASE_FILES_SCRIPT_FORMAT;
@@ -1593,8 +1654,8 @@ public class ParserCommand extends ParserDDL {
 
         Object[] args = new Object[2];
 
-        args[0] = flag == null ? (Object) value
-                               : (Object) flag;
+        args[0] = flag == null ? value
+                               : flag;
         args[1] = mode;
 
         return new StatementCommand(type, args, null, names);
@@ -1674,7 +1735,7 @@ public class ParserCommand extends ParserDDL {
                             throw unexpectedToken();
                     }
 
-                    args[1] = new Integer(level);
+                    args[1] = Integer.valueOf(level);
 
                     break;
                 }
@@ -1750,14 +1811,38 @@ public class ParserCommand extends ParserDDL {
     private Statement compileLock() {
 
         read();
-        readThis(Tokens.TABLE);
+
+        if (readIfThis(Tokens.CATALOG)) {
+            return compileLockCatalog();
+        } else {
+            readThis(Tokens.TABLE);
+
+            return compileLockTable();
+        }
+    }
+
+    private Statement compileLockCatalog() {
+
+        boolean isLock    = processTrueOrFalse();
+        int statementType = isLock ? StatementTypes.TRANSACTION_LOCK_CATALOG
+                                   : StatementTypes.TRANSACTION_UNLOCK_CATALOG;
+        HsqlName[] writeTableNames =
+            isLock ? database.schemaManager.getCatalogAndBaseTableNames()
+                   : null;
+        Statement cs = new StatementSession(statementType, null,
+                                            writeTableNames);
+
+        return cs;
+    }
+
+    private Statement compileLockTable() {
 
         OrderedHashSet readSet  = new OrderedHashSet();
         OrderedHashSet writeSet = new OrderedHashSet();
 
         outerloop:
         while (true) {
-            Table table = readTableName();
+            Table table = readTableName(true);
 
             switch (token.tokenType) {
 
@@ -1820,7 +1905,6 @@ public class ParserCommand extends ParserDDL {
 
             read();
 
-            String   sql  = getLastPart();
             Object[] args = new Object[]{ savepoint };
             Statement cs =
                 new StatementSession(StatementTypes.ROLLBACK_SAVEPOINT, args);
@@ -1862,7 +1946,6 @@ public class ParserCommand extends ParserDDL {
 
         read();
 
-        String   sql  = getLastPart();
         Object[] args = new Object[]{ name };
 
         return new StatementSession(StatementTypes.SAVEPOINT, args);
@@ -1877,7 +1960,6 @@ public class ParserCommand extends ParserDDL {
 
         read();
 
-        String   sql  = getLastPart();
         Object[] args = new Object[]{ name };
 
         return new StatementSession(StatementTypes.RELEASE_SAVEPOINT, args);
@@ -1934,6 +2016,18 @@ public class ParserCommand extends ParserDDL {
                 return new StatementSession(
                     StatementTypes.SET_SESSION_RESULT_MEMORY_ROWS, args);
             }
+            case Tokens.FEATURE : {
+                read();
+
+                String   feature = parseSQLFeatureValue();
+                Boolean  value   = processTrueOrFalseObject();
+                Object[] args    = new Object[] {
+                    feature, value
+                };
+
+                return new StatementSession(StatementTypes.SET_SESSION_FEATURE,
+                                            args);
+            }
             default :
                 throw unexpectedToken();
         }
@@ -1964,8 +2058,6 @@ public class ParserCommand extends ParserDDL {
                 throw Error.error(ErrorCode.X_0P000);
             }
         }
-
-        String sql = getLastPart();
 
         return new StatementSession(StatementTypes.SET_ROLE,
                                     new Expression[]{ e });
@@ -1998,8 +2090,6 @@ public class ParserCommand extends ParserDDL {
                 throw Error.error(ErrorCode.X_42563);
             }
         }
-
-        String sql = getLastPart();
 
         return new StatementSession(StatementTypes.SET_TIME_ZONE,
                                     new Expression[]{ e });
@@ -2035,9 +2125,10 @@ public class ParserCommand extends ParserDDL {
                 read();
                 break;
 
-            // only semicolon is accepted here
+            default :
         }
 
+        // only semicolon is accepted here
         if (token.tokenType == Tokens.SEMICOLON) {
             read();
         }
@@ -2046,8 +2137,7 @@ public class ParserCommand extends ParserDDL {
             throw unexpectedToken();
         }
 
-        String   sql  = getLastPart();
-        Object[] args = new Object[]{ new Integer(closemode) };
+        Object[] args = new Object[]{ Integer.valueOf(closemode) };
         Statement cs = new StatementCommand(StatementTypes.DATABASE_SHUTDOWN,
                                             args, null, null);
 
@@ -2179,6 +2269,35 @@ public class ParserCommand extends ParserDDL {
                                             args, null, names);
 
         return cs;
+    }
+
+    private Statement compilePerform() {
+
+        read();
+
+        switch (token.tokenType) {
+
+            case Tokens.CHECK : {
+                read();
+                readThis(Tokens.TABLE);
+
+                Table table = readTableName();
+
+                readThis(Tokens.INDEX);
+
+                Object[] args = new Object[] {
+                    table.getName(), Integer.valueOf(1), null
+                };
+                HsqlName[] names =
+                    database.schemaManager.getCatalogAndBaseTableNames(
+                        table.getName());
+
+                return new StatementCommand(StatementTypes.CHECK_INDEX, args,
+                                            null, names);
+            }
+            default :
+                throw unexpectedToken();
+        }
     }
 
     private Statement compileCheckpoint() {
